# desafio_treinamento_qmob

./: BreadCrumbDelegate.qml  CMakeLists.txt  FolderItemDelegate.qml  GridViewModel.qml  IconButton.qml  README.md  backend.cpp  backend.h  create_folder_tree.py  httprequest.cpp  httprequest.h  main.cpp  main.qml  materialicons.h  qt6-tree.json  qtbase-directory-tree.json  resources.qrc
